# sidereon

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-NOTICES.md
crates/sidereon/: Cargo.toml  README.md  build.rs
crates/sidereon-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/sidereon-core/fixtures-generators/: generate_dop_multi.py  generate_dted_points.py  generate_geodetic_proj.py  generate_normality.py  generate_tec_grid.py  generate_tropo_zwd.py  requirements.txt
crates/sidereon-core/src/: ambiguity.rs  antenna.rs  antex.rs  atmosphere.rs  broadcast_comparison.rs  carrier_phase.rs  combinations.rs  constants.rs  constellation.rs  dgnss.rs  ephemeris.rs  error.rs  frame.rs  frequencies.rs  geoid.rs  geometry.rs  id.rs  ils.rs  lib.rs  observables.rs  orbit.rs  positioning.rs  ppp_corrections.rs  prelude.rs  quality.rs  rinex.rs  rinex_clock.rs  rinex_common.rs  rtk.rs  signal.rs  terrain.rs  test_parity.rs  tolerances.rs  validate.rs  velocity.rs
crates/sidereon-core/src/astro/: angles.rs  atmosphere.rs  cdm.rs  conjunction.rs  constants.rs  covariance.rs  coverage.rs  doppler.rs  elements.rs  error.rs  iod.rs  lambert.rs  mod.rs  observation.rs  oem.rs  omm.rs  opm.rs  passes.rs  rf.rs  spk.rs  state.rs  tca.rs  tle.rs  tolerances.rs  xml.rs
crates/sidereon-core/src/broadcast/: mod.rs  tests.rs
crates/sidereon-core/src/crinex/: mod.rs  tests.rs
crates/sidereon-core/src/dop/: mod.rs  tests.rs
crates/sidereon-core/src/estimation/: mod.rs  recipe.rs  strategies.rs
crates/sidereon-core/src/format/: columns.rs  fmtnum.rs  kvn.rs  mod.rs  records.rs  tokens.rs
crates/sidereon-core/src/geometry/: range.rs
crates/sidereon-core/src/glonass/: mod.rs  tests.rs
crates/sidereon-core/src/ionex/: grid.rs  klobuchar.rs  mod.rs  nequick_g.rs  nequick_g_data.rs  slant.rs  tec_grid.rs  tests.rs  write.rs
crates/sidereon-core/src/navigation/: lnav.rs  mod.rs
crates/sidereon-core/src/precise_positioning/: auto_init.rs  cycle_slip.rs  fixed.rs  float.rs  kinematic.rs  mod.rs  model.rs  normal.rs  prep.rs  raim.rs  rows.rs  tec.rs  tests.rs  types.rs  velocity.rs
crates/sidereon-core/src/quality/: normality.rs
crates/sidereon-core/src/reduced_orbit/: mod.rs  tests.rs  time.rs
crates/sidereon-core/src/rinex_nav/: mod.rs  store.rs  tests.rs  write.rs
crates/sidereon-core/src/rinex_obs/: mod.rs  tests.rs  write.rs
crates/sidereon-core/src/rtcm/: antenna.rs  bits.rs  crc.rs  ephemeris.rs  framing.rs  mod.rs  msm.rs  station.rs  tests.rs
crates/sidereon-core/src/rtk_filter/: antenna.rs  arc.rs  fixed.rs  float.rs  mod.rs  model.rs  moving_baseline.rs  normal.rs  rows.rs  search.rs  state.rs  tests.rs  update.rs
crates/sidereon-core/src/sp3/: combine.rs  interp.rs  mod.rs  samples.rs  tests.rs  write.rs
crates/sidereon-core/src/spp/: config.rs  fallback.rs  mod.rs  source.rs  tests.rs
crates/sidereon-core/src/staleness/: mod.rs  (+1 more)
crates/sidereon-core/tests/: antex.rs  broadcast_comparison.rs  broadcast_spp_fallback_arc.rs  carrier_phase_oracle.rs  cdm.rs  cdm_python_fixture.rs  conjunction_python_fixture.rs  constellation.rs  constellation_multignss.rs  dense_output.rs  dgnss.rs  events_bodies_dop_python_fixture.rs  frames_time_python_fixture.rs  geodetic_proj.rs  gnss_doppler_velocity_real_arc.rs  gnss_formula_oracle.rs  kepler_oracle.rs  lambda_ils.rs  lnav.rs  numerical_propagation.rs  ocean_loading_oracle.rs  omm.rs  omm_python_fixture.rs  parity_huber_irls.rs  parity_least_squares.rs  parity_libm.rs  parser_panic_smoke.rs  pass_finder_arc.rs  ppp_decimeter_arc.rs  ppp_prep.rs  ppp_real_arc.rs  reduced_orbit_oracle.rs  rf_python_fixture.rs  rinex_clock.rs  robust_real_arc_measurements.rs  rtk_dual_setup.rs  rtk_filter_alloc.rs  rtk_filter_bench.rs  rtk_real_arc.rs  rtklib_oracles.rs  (+13 more)
crates/sidereon/src/: lib.rs
crates/trust-region-least-squares/: CHANGELOG.md  Cargo.toml  README.md
crates/trust-region-least-squares/benches/: bench_problems.json  solve.rs
crates/trust-region-least-squares/fixtures-generators/: bench_scipy.py  generate_bench_problems.py  generate_hostlapack_svd.py  generate_numdiff.py  generate_trf_data_problem.py  generate_trf_general.py  generate_trf_loss.py  generate_trf_small_dense.py  requirements.txt
crates/trust-region-least-squares/scripts/: bitexact_gate.sh
crates/trust-region-least-squares/src/: batch.rs  data.rs  hostlapack.rs  lib.rs  loss.rs  model.rs  numdiff.rs  parity.rs  trf.rs
crates/trust-region-least-squares/tests/: data_problem.rs  data_problem_fixtures.rs  general_fixtures.rs  hostlapack_fixtures.rs  loss_fixtures.rs  numdiff_fixtures.rs  trf_fixtures.rs  validation.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/cdm_parse/: regression-cdm-char-boundary.kvn
fuzz/corpus/crinex_parse/: regression-crinex-v1-char-boundary.crx  regression-crinex-v3-char-boundary.crx
fuzz/corpus/crinex_v3_parse/: regression-crinex-v3-char-boundary.crxbody  valid-minimal-v3-body.crxbody
fuzz/corpus/fuzz_frames/: all-nan-f64
fuzz/corpus/fuzz_propagation/: all-inf-f64
fuzz/corpus/ionex_parse/: regression-ionex-days-overflow.20i  valid-synthetic-1map.20i
fuzz/corpus/omm_xml_parse/: regression-omm-xml-control-char.xml  regression-omm-xml-cr.xml
fuzz/corpus/rinex_obs_parse/: regression-rinex-obs-char-boundary.rnx  valid-minimal-v3.rnx
fuzz/corpus/sp3_round_trip/: regression-undeclared-sat-roundtrip  valid-minimal-sp3c.sp3
fuzz/fuzz_targets/: antex_parse.rs  cdm_parse.rs  cdm_round_trip.rs  compute_common.rs  crinex_parse.rs  crinex_v3_parse.rs  fuzz_atmosphere.rs  fuzz_bodies_events.rs  fuzz_coverage.rs  fuzz_doppler.rs  fuzz_frames.rs  fuzz_math.rs  fuzz_positioning.rs  fuzz_propagation.rs  fuzz_rf.rs  fuzz_rtk.rs  fuzz_signal.rs  fuzz_time.rs  ionex_parse.rs  ionex_round_trip.rs  navcen_parse.rs  oem_parse.rs  oem_round_trip.rs  omm_round_trip.rs  omm_xml_parse.rs  opm_parse.rs  opm_round_trip.rs  rinex_clock_parse.rs  rinex_clock_round_trip.rs  rinex_nav_parse.rs  rinex_nav_round_trip.rs  rinex_obs_parse.rs  rinex_obs_round_trip.rs  sgp4_tle_3line_parse.rs  sp3_parse.rs  sp3_round_trip.rs  spk_parse.rs
(+127 files in other folders)
