[package]
name = "sidereon"
version = "0.9.1"
authors = []
edition = "2021"
description = "Thin ergonomic API over sidereon-core: SP3 loading and SPP/RTK/PPP positioning solves with rich result structs and one error enum"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/sidereon"
homepage = "https://github.com/neilberkman/sidereon"
repository = "https://github.com/neilberkman/sidereon"
keywords = ["gnss", "sp3", "positioning", "rtk", "ppp"]
categories = ["science", "simulation"]

[dependencies]
# The complete engine. The ergonomic surface here adds no modeling logic of its
# own; every function delegates to a sidereon-core reference entry point. The
# default features (gnss + serde) carry the SP3/SPP/RTK/PPP API this wraps.
sidereon-core = { path = "../sidereon-core", version = "0.9.1" }
