[package]
name = "trust-region-least-squares"
version = "0.9.0"
authors = []
edition = "2021"
description = "A dense trust-region-reflective nonlinear least-squares solver that reproduces SciPy's least_squares (method='trf') bit-for-bit on its unbounded path for arbitrary dimension n, every loss (linear/soft_l1/huber/cauchy/arctan), and 2-point Jacobians, with an injectable SVD/BLAS seam so a pinned host LAPACK's numerical trajectory can be reproduced exactly. For anyone who needs scipy-identical least-squares results in Rust."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/trust-region-least-squares"
homepage = "https://github.com/neilberkman/sidereon"
repository = "https://github.com/neilberkman/sidereon"
keywords = ["least-squares", "optimization", "trust-region", "scipy", "numerical"]
categories = ["mathematics", "science", "algorithms"]

# Keep the published package small and source-only: the Python fixture/bench
# generators are shipped for provenance, but their virtualenv (hundreds of MB of
# binaries) and any local criterion output must never be packaged.
exclude = [
    "fixtures-generators/.venv",
    "target",
]

# Build docs.rs with all features so the `trace` module appears in the published
# documentation.
[package.metadata.docs.rs]
all-features = true

[features]
default = []
# `trace` is the one capability kept behind a flag: it threads zero-cost-when-off
# diagnostic branches through the hot solver loop (first-divergence debugging for
# parity work), so it must compile out when unused rather than tax every solve.
trace = []

[dependencies]
# Everything that makes the solver work ships in the single build: there are no
# capability feature flags to remember.
#
# `nalgebra` supplies the default in-crate thin-SVD backend (`NalgebraThinSvd`),
# so the solver works out of the box; callers can still inject a different
# `ThinSvd` at the call site.
nalgebra = { workspace = true }
# `libloading` backs the `hostlapack` bit-exact SVD/BLAS backend. It is compiled
# in by default (not gated): bit-for-bit SciPy parity is reachable in the default
# build by pointing the backend at the host LAPACK/BLAS at runtime.
libloading = "0.8"
# `rayon` fans the independent leave-one-out / perturbed re-solves in the `batch`
# module across a work-stealing pool.
rayon = "1"

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
criterion = "0.5"

[[bench]]
name = "solve"
harness = false
